// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioButton > should render 1`] = `
<div>
  <input
    class="h-4 w-4 cursor-pointer border-theme-secondary-300 transition duration-150 ease-in-out focus:ring-offset-0 text-theme-success-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a danger color 1`] = `
<div>
  <input
    class="h-4 w-4 cursor-pointer border-theme-secondary-300 transition duration-150 ease-in-out focus:ring-offset-0 text-theme-danger-400"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a hint color 1`] = `
<div>
  <input
    class="h-4 w-4 cursor-pointer border-theme-secondary-300 transition duration-150 ease-in-out focus:ring-offset-0 text-theme-hint-500"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a info color 1`] = `
<div>
  <input
    class="h-4 w-4 cursor-pointer border-theme-secondary-300 transition duration-150 ease-in-out focus:ring-offset-0 text-theme-primary-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a success color 1`] = `
<div>
  <input
    class="h-4 w-4 cursor-pointer border-theme-secondary-300 transition duration-150 ease-in-out focus:ring-offset-0 text-theme-success-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a warning color 1`] = `
<div>
  <input
    class="h-4 w-4 cursor-pointer border-theme-secondary-300 transition duration-150 ease-in-out focus:ring-offset-0 text-theme-warning-600"
    type="radio"
  />
</div>
`;
